# bedrock-lib

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/cli/canvas/: canvas_main.rs
src/cli/converse/: converse_main.rs  main.rs
src/cli/invoke/: main.rs
src/cli/list_models/: list_models_main.rs
src/cli/nova/: nova_main.rs
src/lib/: file.rs  mod.rs
src/lib/amazon_nova/: mod.rs
src/lib/amazon_nova/canvas/: json.rs  mod.rs
src/lib/amazon_nova/text/: json.rs  mod.rs
src/lib/converse/: mod.rs  modalities.rs  tool_use.rs
src/lib/invoke_model/amazon/: canvas.rs  mod.rs  nova.rs
src/lib/models/: amazon.rs  mod.rs
