[package]
name = "gensh"
version = "0.1.0"
edition = "2021"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
# https://doc.rust-lang.org/cargo/reference/features.html
[dependencies]
shellfish = { version = "0.10.1", features = ["app", "async", "clap"] }
rustyline = "15.0.0"

# see README.md for issue with clap 4.x and shellfish
# clap = { version = "4.5.26", features = ["derive", "cargo"] }
clap = { version = "3.2.16", features = ["derive", "cargo"] }
aws-sdk-bedrockruntime = "1.67.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["full"] }
shellexpand = "3.1.0"
base64 = "0.22.1"

[lib]
name = "genlib"
path = "src/lib/mod.rs"

[[bin]]
name = "nova"
path = "src/cli/nova/nova_main.rs"

[[bin]]
name = "canvas"
path = "src/cli/canvas/canvas_main.rs"

[[bin]]
name = "converse"
path = "src/cli/converse/converse_main.rs"
