[package]
name = "rusty_bedrock_lib"
version = "0.1.2"
edition = "2021"

[dependencies]
aws-sdk-bedrock = "1.69.0"
aws-sdk-bedrockruntime = "1.67.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-smithy-types = "1.2.11"
base64 = "0.22.1"
# see README.md for issue with clap 4.x and shellfish
# clap = { version = "4.5.26", features = ["derive", "cargo"] }
clap = { version = "3.2.16", features = ["derive", "cargo"] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
rustyline = "15.0.0"
shellexpand = "3.1.0"
shellfish = { version = "0.10.1", features = ["app", "async", "clap"] }
stderrlog = "0.6.0"
tokio = { version = "1", features = ["full"] }
sanitize-filename = "0.6.0"

[lib]
name = "rusty_bedrock_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "nova"
path = "src/cli/nova/nova_main.rs"

[[bin]]
name = "canvas"
path = "src/cli/canvas/canvas_main.rs"

[[bin]]
name = "converse"
path = "src/cli/converse/converse_main.rs"

[[bin]]
name = "models"
path = "src/cli/list_models/list_models_main.rs"
